--- a/.github/workflows/store_repo_structure.yml
+++ b/.github/workflows/store_repo_structure.yml
@@ -26,4 +26,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MONGODB_URI: "mongodb+srv://learnlink:learnlink@cluster0.ptp95.mongodb.net/learnlink"
         run: |
-          python store_repo_structure.py
+          python ./store_repo_structure.py
